...
                                        <rect key="frame" x="0.0" y="35.5" width="65" height="35"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="Vhc-w7-gwz"/>
                                            <constraint firstAttribute="width" constant="65" id="jF2-Ko-XgR"/>
                                        </constraints>
                                        <color key="tintColor" red="0.92182904480000005" green="0.97126132249999997" blue="0.99901300670000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" image="arrowshape.turn.up.backward" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                        </state>
                                        <connections>
                                            <action selector="backButtonTapped:" destination="7fe-eX-vO6" eventType="touchUpInside" id="7sp-c6-O3g"/>
                                        </connections>
                                    </button>
...
